Still error creating a new car

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
       <ul>
         <li><a href="/companies">Companies</a></li>
         <li><a href="/companies/new">Add company</a></li>
+        <li><a href="/cars">Cars</a></li>
+        <li><a href="/cars/new">Add car</a></li>
       </ul>
     </nav>
   </header>
