--- a/views/cars/_form_fields.ejs
+++ b/views/cars/_form_fields.ejs
@@ -5,15 +5,17 @@
 
 <div>
     <label>Company</label>
+
     <select name="company">
         <% companies.forEach(company => { %>
-            <% if (company.id === car.company){ %>
-                <option selected label="<% company.name %>" value="<%= company.id %>">
-            <% } else { %>
-                <option label="<% company.name %>" value="<%= company.id %>">
-            <% } %>
-        <% }) %> 
-    </select>
+          <% if (company.id === car.company) { %>
+            <option selected label="<%= company.name %>" value="<%= company.id %>">
+          <% } else { %>
+            <option label="<%= company.name %>" value="<%= company.id %>">
+          <% } %>
+        <% }) %>
+        </select>
+
 </div>
 
 <div>
