--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-Test
+<h2>Recently added</h2>
+
+<div>
+    <% cars.forEach(car => { %>
+      <img height="150" width="100" src="<%= car.imagePath %>">
+    <% }) %>
+  </div>
