--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -16,6 +16,6 @@
 </form>
 <div>
   <% cars.forEach(car => { %>
-    <img height="150" width="100" src="<%= car.imagePath %>">
+    <a href="/cars/<%=car.id%>"> <img height="150" width="100" src="<%= car.imagePath %>"></a>
   <% }) %>
 </div>
