--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 
 <div>
     <% cars.forEach(car => { %>
-      <img height="150" width="100" src="<%= car.imagePath %>">
+      <a href="/cars/<%=car.id%>">
+        <img height="150" width="100" src="<%= car.imagePath %>">
+      </a>
     <% }) %>
   </div>
