--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,6 +13,12 @@
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
   
+  <style>
+    body {
+      color: white;
+      background-color: black;
+    } 
+  </style>
 
   <title>Mybrary</title>
 </head>
