new authentication with JWT token

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,14 +13,14 @@
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
   
-  <style>
+  <!-- <style>
     body {
       color: white;
       background-color: black;
     } 
-  </style>
+  </style> -->
 
-  <title>Mybrary</title>
+  <title>Nice cars</title>
 </head>
 <body>
   <%- include('../partials/header.ejs') %>
