added cookies for JWT token

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,5 +7,6 @@
         <li><a href="/cars">Cars</a></li>
         <li><a href="/cars/new">Add car</a></li>
       </ul>
+      <%- include ('logoutForm', {url:'/users/logout'})%>
     </nav>
   </header>
