--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,11 @@
 <% if (messages.error) { %> 
     <%= messages.error  %> 
     <% } %> </p>
-<form action ="/login" method = "POST">
+<form action ="/users/login" method = "POST">
     
     <div class="form-item">
-        <label for="email">Email: </label>
-        <input type="email" id="email" name="email" required>
+        <label for="name">Name: </label>
+        <input type="text" id="name" name="name" required>
     </div>
     <br>
     <div class="form-item">
@@ -17,7 +17,9 @@
 
     <div class="btn-row">
         <button type="submit" class="btn btn-primary">Login</button>
-        <a href="/register" class="btn btn-primary">Register</a>
+        
     </div>
 </form>
 
+
+<a href="users/register" class="btn btn-primary">Register</a>
