--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,10 +6,10 @@
         <input type="text" id="name" name="name" required>
     </div>
 
-    <div class="form-item">
+    <!-- <div class="form-item">
         <label for="email">Email: </label>
         <input type="email" id="email" name="email" required>
-    </div>
+    </div> -->
 
     <div class="form-item">
         <label for="password">Password: </label>
