--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,8 @@
 <form action ="/users/login" method = "POST">
     
     <div class="form-item">
-        <label for="name">Name: </label>
-        <input type="text" id="name" name="name" required>
+        <label for="name">E-Mail: </label>
+        <input type="text" id="email" name="email" required>
     </div>
     <br>
     <div class="form-item">
