--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <% if (messages.error) { %> 
     <%= messages.error  %> 
     <% } %> </p>
-<form action ="/users/login" method = "POST">
+<form action ="/login" method = "POST">
     
     <div class="form-item">
         <label for="name">E-Mail: </label>
@@ -22,4 +22,4 @@
 </form>
 
 
-<a href="users/register" class="btn btn-primary">Register</a>
+<a href="/register" class="btn btn-primary">Register</a>
