--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,18 @@
 <h1>Register</h1>
-
+<p style="color:red">
+    <% if (message) { %> 
+        <%= message  %> 
+        <% } %> </p>
 <form action ="/register" method = "POST">
     <div class="form-item">
         <label for="name">Name: </label>
         <input type="text" id="name" name="name" required>
     </div>
 
-    <!-- <div class="form-item">
+    <div class="form-item">
         <label for="email">Email: </label>
         <input type="email" id="email" name="email" required>
-    </div> -->
+    </div>
 
     <div class="form-item">
         <label for="password">Password: </label>
