--- a/views/layouts/loginLayout.ejs
+++ b/views/layouts/loginLayout.ejs
@@ -12,12 +12,10 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
-  
 
-  <title>Cars</title>
+  <title>Login</title>
 </head>
 <body>
-  <%- include('../partials/header.ejs') %>
   <%- include('../partials/errorMessage.ejs') %>
   <%- body %>
 </body>
