--- a/views/layouts/loginLayout.ejs
+++ b/views/layouts/loginLayout.ejs
@@ -14,6 +14,7 @@
   <script defer src="/javascripts/fileUpload.js"></script>
 
   <title>Login</title>
+  <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
   <%- include('../partials/errorMessage.ejs') %>
