--- a/views/companies/_form_fields.ejs
+++ b/views/companies/_form_fields.ejs
@@ -1,2 +1,4 @@
-<label>Name</label>
-<input type="text" name="name" value="<%= company.name %>">
+<div class="form-item">
+    <label>Name</label>
+    <input type="text" name="name" value="<%= company.name %>">
+</div>
