--- a/views/companies/index.ejs
+++ b/views/companies/index.ejs
@@ -1,13 +1,21 @@
-<h2>Search Companies</h2>
+<h2 class="page-header">Search Companies</h2>
 <form action="/companies" method="GET">
-  <label>Name</label>
-  <input type="text" name="name" value="<%= searchOptions.name %>">
-  <button type="submit">Search</button>
+  
+  
+  <div class="form-item">
+    <label>Name</label>
+      <input type="text" name="name" value="<%= searchOptions.name %>">
+    </div>
+    <div class="btn-row">
+      <button type="submit" class="btn btn-primary">Search</button>
+    </div>
 </form>
 <br>
 <% companies.forEach(company => { %>
-  <div><%= company.name %></div>
-  <a href="/companies/<%=company.id %>">View</a>
-  <a href="/companies/<%=company.id %>/edit">Edit</a>
-  <%- include ('../partials/deleteForm', {url: `/companies/${company.id}`})%>
+  <div class="text"><%= company.name %></div>
+  <div class="btn-row">
+    <a class="btn btn-primary" href="/companies/<%=company.id %>">View</a>
+    <a class="btn btn-primary" href="/companies/<%=company.id %>/edit">Edit</a>
+    <%- include ('../partials/deleteForm', {url: `/companies/${company.id}`})%>
+</div>
 <% }) %>
