--- a/views/companies/show.ejs
+++ b/views/companies/show.ejs
@@ -1,6 +1,9 @@
-<h2><%=company.name %></h2>
-<a href="/company/<%=company.id %>/edit">Edit</a>
+<h2 class="page-header"><%=company.name %></h2>
+<div class="btn-row">
+<a class="btn btn-primary" href="/company/<%=company.id %>/edit">Edit</a>
 <%- include('../partials/deleteForm', {url: `/companies/${company.id}`}) %>
+</div>
+
 
 <% if (carsByCompany.length  > 0 ){%>
     <h2>Cars from this company</h2>
