--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h2>Recently added</h2>
 
-<div>
+<div class="home">
     <% cars.forEach(car => { %>
       <a href="/cars/<%=car.id%>">
         <img height="150" width="100" src="<%= car.imagePath %>">
