--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,9 +12,9 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
-  
 
   <title>Cars</title>
+  <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
   <%- include('../partials/header.ejs') %>
