--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,10 +16,10 @@
     </div>
 
     <div class="btn-row">
-        <button type="submit" class="btn btn-primary">Login</button>
-        
+        <button class="btn btn-primary" type="submit">Login</button>
+        <a class="btn btn-primary" href="/register" class="btn btn-primary">Register</a>
     </div>
 </form>
 
 
-<a href="/register" class="btn btn-primary">Register</a>
+
