--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,7 +12,7 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
-
+  <script>console.log('Hallo Welt')</script>
   <title>Cars</title>
   <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
