--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,15 +4,18 @@
     <%= messages.error  %> 
     <% } %> </p>
 <form action ="/login" method = "POST">
-    
-    <div class="form-item">
-        <label for="name">E-Mail: </label>
-        <input type="text" id="email" name="email" required>
+
+    <div class="form-row">
+        <div class="form-item">
+            <label for="name">E-Mail:</label>
+            <input type="text" id="email" name="email" required>
+        </div>
     </div>
-    <br>
-    <div class="form-item">
-        <label for="password">Password: </label>
-        <input type="password" id="password" name="password" required>
+    <div class="form-row">
+        <div class="form-item">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
     </div>
 
     <div class="btn-row">
