--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,10 +25,14 @@ body{
     max-width: 1200px;
     margin: auto;
     margin-bottom: 3rem;
+    
+    
 }
 
 .inner-container {
+    
     margin: 0 2rem;
+    margin-left: 3rem;
   }
 
 
