--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -1,7 +1,9 @@
-<h2>Edit Car</h2>
+<h2 class="page-header">Edit Car</h2>
 
-<form action="/cars/<%=car.id %>?_method=put" method="POST">
+<form id="form" action="/cars/<%=car.id %>?_method=put" method="POST">
   <%- include('_form_fields') %>
-  <a href="/cars">Cancel</a>
-  <button type="submit">Update</button>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-primary" href="/cars">Cancel</a>
+    <button class="btn btn-danger" type="submit">Update</button>
+  </div>
 </form>
