--- a/views/cars/new.ejs
+++ b/views/cars/new.ejs
@@ -1,7 +1,9 @@
-<h2>New Car</h2>
+<h2 class="page-header">New Car</h2>
 
-<form action="/cars" method="POST">
+<form id="form" action="/cars" method="POST">
   <%- include('_form_fields') %>
-  <a href="/cars">Cancel</a>
-  <button type="submit">Create</button>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/cars">Cancel</a>
+    <button class="btn btn-primary" type="submit">Create</button>
+  </div>
 </form>
