--- a/views/companies/edit.ejs
+++ b/views/companies/edit.ejs
@@ -2,8 +2,8 @@
 
 <form id="form" action="/companies/<%= company.id %>?_method=PUT" method="POST">
   <%- include('_form_fields') %>
-  <div class="btn-row">
-    <a class="btn btn-primary" href="/companies/<%=company.id%>">Cancel</a>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/companies/<%=company.id%>">Cancel</a>
     <button class="btn btn-primary" type="submit">Update</button>
   </div>
 </form>
