--- a/views/companies/index.ejs
+++ b/views/companies/index.ejs
@@ -1,21 +1,26 @@
 <h2 class="page-header">Search Companies</h2>
 <form action="/companies" method="GET">
   
-  
+<div class="form-row">
   <div class="form-item">
     <label>Name</label>
-      <input type="text" name="name" value="<%= searchOptions.name %>">
-    </div>
+    <input type="text" name="name" value="<%= searchOptions.name %>">
+  </div>
+</div>
+
+  <div class="form-row form-row-end">
     <div class="btn-row">
       <button type="submit" class="btn btn-primary">Search</button>
     </div>
+  </div>
 </form>
 <br>
+
 <% companies.forEach(company => { %>
   <div class="text"><%= company.name %></div>
   <div class="btn-row">
     <a class="btn btn-primary" href="/companies/<%=company.id %>">View</a>
     <a class="btn btn-primary" href="/companies/<%=company.id %>/edit">Edit</a>
     <%- include ('../partials/deleteForm', {url: `/companies/${company.id}`})%>
-</div>
+  </div>
 <% }) %>
