--- a/views/companies/new.ejs
+++ b/views/companies/new.ejs
@@ -3,7 +3,7 @@
 <form id="form" action="/companies" method="POST">
   <%- include('_form_fields') %>
   <div class="btn-row">
-    <a class="btn btn-primary" href="/companies">Cancel</a>
+    <a class="btn btn-danger" href="/companies">Cancel</a>
     <button class="btn btn-primary" type="submit">Create</button>
   </div>
 </form>
