--- a/views/cars/_form_fields.ejs
+++ b/views/cars/_form_fields.ejs
@@ -35,7 +35,7 @@
 
   <div class="form-item form-item-no-grow">
     <label>Image</label>
-    <input type="file" name="image" class="filepond">
+    <input type="file" name="image" class="car-image filepond">
   </div>
 
 
@@ -43,7 +43,5 @@
     <label>Description</label>
     <textarea name="description"><%= car.description %></textarea>
   </div>
-
-
 
 </div>
