--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
   <script defer src="/javascripts/fileUpload.js"></script>
   <script>console.log('Hallo Welt')</script>
   <title>Cars</title>
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link id="main-css" rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
   <%- include('../partials/header.ejs') %>
