--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,5 @@
 <h2>Recently added</h2>
 
 <div class="home">
-    <% cars.forEach(car => { %>
-      <a href="/cars/<%=car.id%>">
-        <img height="150" width="100" src="<%= car.imagePath %>">
-      </a>
-    <% }) %>
+    <%- include('partials/carGrid.ejs', {cars: cars, large: true}) %>
   </div>
