I added an admin page and updated css for login and register

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,6 +5,7 @@
 @import './shared/form.css';
 @import './shared/company.css';
 @import './shared/car.css';
+@import './shared/login.css';
 
 :root{
     font-family: 'Montserrat', sans-serif;
