--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -17,7 +17,7 @@
         <div class="car-details-label">Company:</div>
         <div><%=car.company.name%></div>
         <div class="car-details-label">Release Date:</div>
-        <div><%=car.createdAt.toDateString()%></div>
+        <div><%=car.releaseDate.toDateString()%></div>
         <div class="car-details-label">PS:</div>
         <div><%=car.PS%></div>
         <div class="car-details-label">Description:</div>
