--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,29 +1,36 @@
-<h1>Register</h1>
-<p style="color:red">
-    <% if (message) { %> 
-        <%= message  %> 
-        <% } %> </p>
-<form action ="/register" method = "POST">
-    <div class="form-item">
-        <label for="name">Name: </label>
-        <input type="text" id="name" name="name" required>
-    </div>
+<div class="register-form">
+    <h2 class="page-header">Register</h2>
+    <p style="color:red">
+        <% if (message) { %> 
+            <%= message  %> 
+            <% } %> </p>
 
-    <div class="form-item">
-        <label for="email">Email: </label>
-        <input type="email" id="email" name="email" required>
-    </div>
-
-    <div class="form-item">
-        <label for="password">Password: </label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <div class="btn-row">
-        <button type="submit" class="btn btn-primary">Register</button>
-        <a href="/" class="btn btn-primary">Login</a>
-    </div>
     
+    <form id="form" action ="/register" method = "POST">
+        <div class="form-row">
+            <div class="form-item">
+                <label for="name">Name: </label>
+                <input type="text" id="name" name="name" required>
+            </div>
+        </div>
 
-</form>
+        <div class="form-row">
+            <div class="form-item">
+                <label for="email">Email: </label>
+                <input type="email" id="email" name="email" required>
+            </div>
+        </div>
+        <div class="form-row">
+        <div class="form-item">
+            <label for="password">Password: </label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        </div>
+        <div class="btn-row">
+            <button type="submit" class="btn btn-primary">Register</button>
+            <a href="/" class="btn btn-primary">Login</a>
+        </div>
+        
 
-
+    </form>
+</div>
