Created activity logs for admin page

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,1 +1,6 @@
 <h2 class="page-header">Admin</h2>
+
+<div class="btn-row">
+    <a class="btn btn-primary" href="/admin/logs">Logs</a>
+    <a class="btn btn-danger" href="/admin/deleteLogs">Delete all Logs</a>
+</div>
